--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="Image/c2img4.webp" alt="First slide">
+              <img class="d-block w-100" src="Image/c2img4.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="Image/c2img5.webp" alt="Second slide">
+              <img class="d-block w-100" src="Image/c2img5.jpg" alt="Second slide">
             </div>
           </div>
         </div>
@@ -552,24 +552,24 @@
           <div class="carousel-inner ">
             <div class="carousel-item carousel-last active">
               <div>
-                <img src="image/c2img1.webp">
+                <img src="image/c2img1.jpg">
               </div>
               <div>
-                <img src="image/c2img2.webp">
+                <img src="image/c2img2.jpg">
               </div>
               <div>
-                <img src="image/c2img3.webp">
+                <img src="image/c2img3.jpg">
               </div>
             </div>
             <div class="carousel-item carousel-last">
               <div>
-                <img src="image/c2img4.webp">
+                <img src="image/c2img4.jpg">
               </div>
               <div>
-                <img src="image/c2img5.webp">
+                <img src="image/c2img5.jpg">
               </div>
               <div>
-                <img src="image/c2img6.webp">
+                <img src="image/c2img6.jpg">
               </div>
             </div>
           </div>
@@ -625,18 +625,18 @@
       <a href="#" style="margin-top: 20px; text-decoration: none;">Know More</a>
       <section id="advantage-card-sec">
         <div class="advantage-card">
-          <img src="Image/price.png">
+          <img src="Image/price.jpg">
           <h5>One of the best Prices</h5>
           <p>Guaranteed</p>
         </div>
         <div class="advantage-card">
-          <img src="Image/advice.png">
+          <img src="Image/advice.jpg">
           <br><br>
           <h5>Unbiased Advice</h5>
           <p>Keeping customers first</p>
         </div>
         <div class="advantage-card">
-          <img src="Image/reliable.png">
+          <img src="Image/reliable.jpg">
           <br><br>
           <h5>100% Reliable</h5>
           <p>Regulated by IRDAI</p>
@@ -648,7 +648,7 @@
           <p>Made stress-free</p>
         </div>
         <div class="advantage-card">
-          <img src="Image/help.png">
+          <img src="Image/help.jpg">
           <br><br>
           <h5>Happy to Help</h5>
           <p>Every day of the week </p>
@@ -672,13 +672,13 @@
            <li>Download your policy with a single tap</li>
          </ul>
          <a id="download-app">Download our app from</a><br>
-         <img src="image/gplay.png">
-         <img src="image/appstore.png" style="margin-left: 10px;">
+         <img src="image/gplay.jpg">
+         <img src="image/appstore.jpg" style="margin-left: 10px;">
          </p>
       </div>
 
       <div id="get-app-2">
-        <img src="image/pbapp.webp">
+        <img src="image/pbapp.jpg">
       </div>
     </section>
     </div>
@@ -767,58 +767,58 @@
             <img src="Image/p3.jpg">
           </div>
           <div>
-            <img src="Image/p4.png">
+            <img src="Image/p4.jpg">
           </div>
           <div>
-            <img src="Image/p5.png">
+            <img src="Image/p5.jpg">
           </div>
           <div>
-            <img src="Image/p6.png">
+            <img src="Image/p6.jpg">
           </div>
           <div>
-            <img src="Image/p7.png">
+            <img src="Image/p7.jpg">
           </div>
           <div>
-            <img src="Image/p8.png">
+            <img src="Image/p8.jpg">
           </div>
           <div>
-            <img src="Image/p9.webp">
+            <img src="Image/p9.jpg">
           </div>
           <div>
-            <img src="Image/p10.png">
+            <img src="Image/p10.jpg">
           </div>
           <div>
-            <img src="Image/p11.webp">
+            <img src="Image/p11.jpg">
           </div>
           <div>
-            <img src="Image/p12.png">
+            <img src="Image/p12.jpg">
           </div>
           <div>
-            <img src="Image/p13.png">
+            <img src="Image/p13.jpg">
           </div>
           <div>
             <img src="Image/p14.jpg">
           </div>
           <div>
-            <img src="Image/p15.png">
+            <img src="Image/p15.jpg">
           </div>
           <div>
             <img src="Image/p16.jpg">
           </div>
           <div>
-            <img src="Image/p17.png">
+            <img src="Image/p17.jpg">
           </div>
           <div>
-            <img src="Image/p18.png">
+            <img src="Image/p18.jpg">
           </div>
           <div>
-            <img src="Image/p19.png">
+            <img src="Image/p19.jpg">
           </div>
           <div>
-            <img src="Image/p20.png">
+            <img src="Image/p20.jpg">
           </div>
           <div>
-            <img src="Image/p21.png">
+            <img src="Image/p21.jpg">
           </div>
         </section>
       </section>
@@ -833,11 +833,11 @@
         </div>
         <marquee direction="alternate" onmouseover="this.stop();" onmouseout="this.start();">
             <img src="Image/in1.jfif" class="marq-img">
-            <!-- <img src="Image/in2.png" class="marq-img"> -->
-            <img src="Image/in3.png" class="marq-img">
+            <!-- <img src="Image/in2.jpg" class="marq-img"> -->
+            <img src="Image/in3.jpg" class="marq-img">
             <img src="Image/in4.jpg" class="marq-img">
-            <img src="Image/in5.png" class="marq-img">
-            <img src="Image/in6.png" class="marq-img">
+            <img src="Image/in5.jpg" class="marq-img">
+            <img src="Image/in6.jpg" class="marq-img">
         </marquee>
       </section>
     </div>
@@ -876,7 +876,7 @@
       </div>
 
       <div id="question-2">
-        <img src="image/question.png">
+        <img src="image/question.jpg">
       </div>
     </section>
     </div>
