--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
       </div>
 
       <div id="get-app-2">
-        <img src="image/pbapp.jpg">
+        <img src="https://static.pbcdn.in/cdn/images/home-v1/get-app.png">
       </div>
     </section>
     </div>
@@ -832,7 +832,7 @@
           <div class="progress-bar"></div>
         </div>
         <marquee direction="alternate" onmouseover="this.stop();" onmouseout="this.start();">
-            <img src="Image/in1.jfif" class="marq-img">
+            <img src="Image/in1.jpg" class="marq-img">
             <!-- <img src="Image/in2.jpg" class="marq-img"> -->
             <img src="Image/in3.jpg" class="marq-img">
             <img src="Image/in4.jpg" class="marq-img">
